# mini_amr

./: .gitignore  .gitmodules
Shortcut/: GUI.sh  agvMapping.desktop  agvNavigation.desktop  nav.sh  rviz.sh  slam.sh  teleop.sh
amrROS2_Controller/config/custom/: smr_config.h
amrROS2_Controller/emr_firmware/: platformio.ini
amrROS2_Controller/emr_firmware/src/: .main.cpp.swp  main.cpp  test_batt.cpp_test  test_imu.cpp_test  test_motor.cpp_test
amrROS2_Controller/emr_micro_ros/: platformio.ini
amrROS2_Controller/emr_micro_ros/src/: main.cpp
amrROS2_Controller/micro_ros_rp2040/: platformio.ini
amrROS2_Controller/micro_ros_rp2040/src/: main.cpp
amrROS2_Controller/sontana_firmware/: error.txt  platformio.ini
amrROS2_Controller/sontana_firmware/lib/DriverIcMd-master/: DriverIcMd.cpp  DriverIcMd.h  IcMdEncoder.h
amrROS2_Controller/sontana_firmware/lib/encoder/: encoder.h
amrROS2_Controller/sontana_firmware/lib/motor/: motor.h  zd_motor.h
amrROS2_Controller/sontana_firmware/lib/pid/: pid.cpp
amrROS2_Controller/sontana_firmware/src/: firmware.ino
amrROS2_Controller/test_cliff/: platformio.ini
amrROS2_Controller/test_cliff/src/: main.ino
amrROS2_ws/: error.txt
amrROS2_ws/install/action_autodock/share/action_autodock/: package.sh  package.xml  package.zsh
amrROS2_ws/install/bringup/share/bringup/: package.sh
amrROS2_ws/install/custom_interface/share/custom_interface/: package.xml
amrROS2_ws/install/dock_lidar/share/dock_lidar/: package.zsh
amrROS2_ws/install/example/share/example/: package.sh
amrROS2_ws/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
amrROS2_ws/install/micro_ros_agent/share/micro_ros_agent/: package.sh
amrROS2_ws/install/micro_ros_msgs/share/micro_ros_msgs/: package.sh
amrROS2_ws/install/navigation/share/navigation/: local_setup.sh  package.xml  test_nav_namespace.tar
amrROS2_ws/install/python_pkg/lib/python_pkg/: ip_publisher
amrROS2_ws/install/python_pkg/share/python_pkg/: package.sh
amrROS2_ws/install/robot_data_tool/lib/robot_data_tool/: absolute_origin_laser  map_pose_provider  robot_detail
amrROS2_ws/install/robot_data_tool/share/robot_data_tool/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
amrROS2_ws/install/robot_hardware_interface/share/robot_hardware_interface/: package.sh
amrROS2_ws/install/robot_nav_tool/lib/robot_nav_tool/: nav_gui_bridge
amrROS2_ws/install/robot_nav_tool/share/robot_nav_tool/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
amrROS2_ws/install/sllidar_ros2/share/sllidar_ros2/: package.sh
amrROS2_ws/log/: latest_build
amrROS2_ws/src/: hardware_interface.tar
amrROS2_ws/src/action_autodock/: CMakeLists.txt  setup.cfg  setup.py
amrROS2_ws/src/action_autodock/config/: auto_dock_config.yaml
amrROS2_ws/src/action_autodock/launch/: auto_dock_launch.py
amrROS2_ws/src/bringup/: CMakeLists.txt
amrROS2_ws/src/bringup/config/: bringup.yaml
amrROS2_ws/src/bringup/launch/: bringup.launch.py
amrROS2_ws/src/custom_interface/: CMakeLists.txt
amrROS2_ws/src/description/urdf/sensors/: imu.urdf.xacro
amrROS2_ws/src/dock_lidar/: CMakeLists.txt
amrROS2_ws/src/dock_lidar/config/: dock_config.yaml
amrROS2_ws/src/dock_lidar/src/: dock_coordinates.cpp  icp_2d.cpp  laser_processor.cpp  linear_pose_filter_2d.cpp  perception - Copy.cpp  perception.cpp  perception_old.cpp  tf2listener.cpp
amrROS2_ws/src/example/: CMakeLists.txt
amrROS2_ws/src/gazebo/: CMakeLists.txt  package.xml
amrROS2_ws/src/gazebo/config/: controller.yaml  ekf.yaml  gazebo.yaml
amrROS2_ws/src/gazebo/launch/: gazebo.launch.py
amrROS2_ws/src/log/: latest_build
amrROS2_ws/src/navigation/: CMakeLists.txt
amrROS2_ws/src/navigation/config/: mapper_params_online_async.yaml  navigation.yaml  slam_localization.yaml
amrROS2_ws/src/navigation/launch/: navigation.launch.py  navigation_launch.py  rviz_nav.launch.py  slam.launch.py
amrROS2_ws/src/navigation/maps/: Turtlebot_Arena_map.pgm
amrROS2_ws/src/navigation/rviz/: rviz_nav_namespace.rviz  slam.rviz
amrROS2_ws/src/python_pkg/: setup.py
amrROS2_ws/src/python_pkg/python_pkg/: ip_address_publisher.py
amrROS2_ws/src/robot_hardware_interface/src/: hardware_interface_node.cpp  robot_hardware_interface.cpp
amrROS2_ws/src/robot_nav_tool/json/: named_point.json
amrROS2_ws/src/robot_nav_tool/launch/: nav_gui_bridge.launch.py
amrROS2_ws/temp/install/: local_setup.sh
amrROS2_ws/temp/log/: latest_build
amrROS2_ws/temp2/install/: setup.sh
amrROS2_ws/temp2/install/dock_lidar/share/dock_lidar/: local_setup.sh  package.ps1  package.xml
navigation_ROS2/: Ui_NavigationWB.py  agvNavigationWB.py  agvNavigationWB.py_backup  target_poses.csv
(+106 files in other folders)
