<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dock_lidar</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="poo@todo.todo">poo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>custom_interface</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>eigen</depend>
  <depend>nav_msgs</depend>
  <depend>angles</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
